test/scc/decl/semantic-errors/054.t
void foo(static int a)
{
}